[package]
name = "vyper"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
anchor-client = "0.24.2"
solana-cli-config = "1.9.13"
bs58 = "0.4.0"
borsh = "0.9.3"
vyper-core = { git = "https://github.com/vyper-protocol/vyper-core", branch = "main", features = ["no-entrypoint"] }
console = "0.15.1"