[package]
name = "vyper-cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
anchor-client = "0.24.2"
solana-cli-config = "1.9.13"
bs58 = "0.4.0"
borsh = "0.9.3"
vyper-core = { git = "https://github.com/vyper-protocol/vyper-core", branch = "dev", features = ["no-entrypoint"] }
redeem-logic-forward = { git = "https://github.com/vyper-protocol/vyper-core", branch = "dev", features = ["no-entrypoint"] }
redeem-logic-settled-forward = { git = "https://github.com/vyper-protocol/vyper-core",branch = "dev", features = ["no-entrypoint"]}
redeem-logic-vanilla-option = { git = "https://github.com/vyper-protocol/vyper-core",branch = "dev", features = ["no-entrypoint"]}
redeem-logic-digital = { git = "https://github.com/vyper-protocol/vyper-core",branch = "dev", features = ["no-entrypoint"]}
rate-switchboard = { git = "https://github.com/vyper-protocol/vyper-core", branch = "dev", features = ["no-entrypoint"] }
rate-pyth = { git = "https://github.com/vyper-protocol/vyper-core", branch = "dev", features = ["no-entrypoint"] }
vyper-otc = { git = "https://github.com/vyper-protocol/vyper-otc", branch = "dev", features = ["no-entrypoint"] }
console = "0.15.1"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
chrono = "0.4.23"
requestty = "0.4.1"

[[bin]]
name = "vyper"
path = "./src/main.rs"
